parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { proto: peg$parseproto },
      peg$startRuleFunction  = peg$parseproto,

      peg$c0 = function(z, a, b) {
      	var arr = {syntax: a.syntax};
          arr.content = b.filter(function(a){return a !== undefined});
      	return arr;
      },
      peg$c1 = "//",
      peg$c2 = peg$literalExpectation("//", false),
      peg$c3 = "\r\n",
      peg$c4 = peg$literalExpectation("\r\n", false),
      peg$c5 = "\n",
      peg$c6 = peg$literalExpectation("\n", false),
      peg$c7 = peg$anyExpectation(),
      peg$c8 = function() {},
      peg$c9 = "/*",
      peg$c10 = peg$literalExpectation("/*", false),
      peg$c11 = "*/",
      peg$c12 = peg$literalExpectation("*/", false),
      peg$c13 = /^[ \r\n\t]/,
      peg$c14 = peg$classExpectation([" ", "\r", "\n", "\t"], false, false),
      peg$c15 = /^[A-Za-z]/,
      peg$c16 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
      peg$c17 = /^[0-9]/,
      peg$c18 = peg$classExpectation([["0", "9"]], false, false),
      peg$c19 = /^[0-7]/,
      peg$c20 = peg$classExpectation([["0", "7"]], false, false),
      peg$c21 = /^[0-9A-Fa-f]/,
      peg$c22 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
      peg$c23 = "_",
      peg$c24 = peg$literalExpectation("_", false),
      peg$c25 = function(a, b) { return a+b.join("") },
      peg$c26 = ".",
      peg$c27 = peg$literalExpectation(".", false),
      peg$c28 = function(a, b) { b.unshift([a]); return b.map(function(c){return c.join('')}).join('') },
      peg$c29 = function(a, b, c) { return (a == '.' ? '.' : '')+b.map(function(a){return a.join('')}).join('')+c },
      peg$c30 = "0",
      peg$c31 = peg$literalExpectation("0", false),
      peg$c32 = /^[1-9]/,
      peg$c33 = peg$classExpectation([["1", "9"]], false, false),
      peg$c34 = function(a) { return parseInt(a[0]+ (a[1] ? a[1].join('') : '')) },
      peg$c35 = function(a) { return parseInt(a, 8) },
      peg$c36 = /^[xX]/,
      peg$c37 = peg$classExpectation(["x", "X"], false, false),
      peg$c38 = function(a) { return parseInt(a, 16) },
      peg$c39 = "inf",
      peg$c40 = peg$literalExpectation("inf", false),
      peg$c41 = "nan",
      peg$c42 = peg$literalExpectation("nan", false),
      peg$c43 = /^[eE]/,
      peg$c44 = peg$classExpectation(["e", "E"], false, false),
      peg$c45 = /^[+\-]/,
      peg$c46 = peg$classExpectation(["+", "-"], false, false),
      peg$c47 = "true",
      peg$c48 = peg$literalExpectation("true", false),
      peg$c49 = "false",
      peg$c50 = peg$literalExpectation("false", false),
      peg$c51 = "'",
      peg$c52 = peg$literalExpectation("'", false),
      peg$c53 = "\"",
      peg$c54 = peg$literalExpectation("\"", false),
      peg$c55 = function(obj) { return obj[1].join('') },
      peg$c56 = /^[^\0\n\\"']/,
      peg$c57 = peg$classExpectation(["\0", "\n", "\\", "\"", "'"], true, false),
      peg$c58 = "\\",
      peg$c59 = peg$literalExpectation("\\", false),
      peg$c60 = /^["']/,
      peg$c61 = peg$classExpectation(["\"", "'"], false, false),
      peg$c62 = /^[abfnrtv"'\\]/,
      peg$c63 = peg$classExpectation(["a", "b", "f", "n", "r", "t", "v", "\"", "'", "\\"], false, false),
      peg$c64 = "{",
      peg$c65 = peg$literalExpectation("{", false),
      peg$c66 = ":",
      peg$c67 = peg$literalExpectation(":", false),
      peg$c68 = "}",
      peg$c69 = peg$literalExpectation("}", false),
      peg$c70 = function(values) { return values.reduce((o, v) => { o[v[1]] = v[5]; return o; }, {}); },
      peg$c71 = "[",
      peg$c72 = peg$literalExpectation("[", false),
      peg$c73 = ",",
      peg$c74 = peg$literalExpectation(",", false),
      peg$c75 = "]",
      peg$c76 = peg$literalExpectation("]", false),
      peg$c77 = function(values) { return values[2].map(v => v[3]); },
      peg$c78 = ";",
      peg$c79 = peg$literalExpectation(";", false),
      peg$c80 = /^[\-+]/,
      peg$c81 = peg$classExpectation(["-", "+"], false, false),
      peg$c82 = "syntax",
      peg$c83 = peg$literalExpectation("syntax", false),
      peg$c84 = "=",
      peg$c85 = peg$literalExpectation("=", false),
      peg$c86 = "proto2",
      peg$c87 = peg$literalExpectation("proto2", false),
      peg$c88 = "proto3",
      peg$c89 = peg$literalExpectation("proto3", false),
      peg$c90 = function(val) { return { type: "syntax", syntax: val } },
      peg$c91 = "import",
      peg$c92 = peg$literalExpectation("import", false),
      peg$c93 = "weak",
      peg$c94 = peg$literalExpectation("weak", false),
      peg$c95 = "public",
      peg$c96 = peg$literalExpectation("public", false),
      peg$c97 = function(mod, pkg) { return {type: "import", package: pkg, modifier: mod } },
      peg$c98 = "package",
      peg$c99 = peg$literalExpectation("package", false),
      peg$c100 = function(val) { return { type: "package", package: val } },
      peg$c101 = "option",
      peg$c102 = peg$literalExpectation("option", false),
      peg$c103 = function(name, val) { return { type: "option", name: name, val: val } },
      peg$c104 = "(",
      peg$c105 = peg$literalExpectation("(", false),
      peg$c106 = ")",
      peg$c107 = peg$literalExpectation(")", false),
      peg$c108 = function(a, c) { if(Array.isArray(a)) a = a.join(''); return a+(c[0] ? c[0].join('') : "") },
      peg$c109 = "double",
      peg$c110 = peg$literalExpectation("double", false),
      peg$c111 = "float",
      peg$c112 = peg$literalExpectation("float", false),
      peg$c113 = "int32",
      peg$c114 = peg$literalExpectation("int32", false),
      peg$c115 = "int64",
      peg$c116 = peg$literalExpectation("int64", false),
      peg$c117 = "uint32",
      peg$c118 = peg$literalExpectation("uint32", false),
      peg$c119 = "uint64",
      peg$c120 = peg$literalExpectation("uint64", false),
      peg$c121 = "sint32",
      peg$c122 = peg$literalExpectation("sint32", false),
      peg$c123 = "sint64",
      peg$c124 = peg$literalExpectation("sint64", false),
      peg$c125 = "fixed32",
      peg$c126 = peg$literalExpectation("fixed32", false),
      peg$c127 = "fixed64",
      peg$c128 = peg$literalExpectation("fixed64", false),
      peg$c129 = "sfixed32",
      peg$c130 = peg$literalExpectation("sfixed32", false),
      peg$c131 = "sfixed64",
      peg$c132 = peg$literalExpectation("sfixed64", false),
      peg$c133 = "bool",
      peg$c134 = peg$literalExpectation("bool", false),
      peg$c135 = "string",
      peg$c136 = peg$literalExpectation("string", false),
      peg$c137 = "bytes",
      peg$c138 = peg$literalExpectation("bytes", false),
      peg$c139 = function(a) {
      	var opts = {};
          a.map(function(a){
                if(typeof a == 'object' && a != null)
                	opts[a.name] = a.val;
          });
      	return opts;    
      },
      peg$c140 = "repeated",
      peg$c141 = peg$literalExpectation("repeated", false),
      peg$c142 = "optional",
      peg$c143 = peg$literalExpectation("optional", false),
      peg$c144 = function(a, b, c, d, e) { 
      	return {
            type: "field",
            repeated: a === "repeated",
            optional: a === "optional",
            typename: b,
            name: c,
            fieldNo: d,
            opts: e == null ? {} : e
      	} 
      },
      peg$c145 = function(a, b) { var arr = [a]; b.map(function(elem){arr.push(elem)}); return arr; },
      peg$c146 = function(name, val) { return {name: name, val: val} },
      peg$c147 = "oneof",
      peg$c148 = peg$literalExpectation("oneof", false),
      peg$c149 = function(b, c) { 
      	var arr = [];
          c.map(function(a){
          	if(a && a.type)
              	arr.push(a);
          });
      	return { type: "oneof", name: b, content: arr } 
      },
      peg$c150 = function(b, c, d, e) {
      	return {
            type: "field",
            typename: b,
            name: c,
            fieldNo: d,
            opts: e == null ? {} : e
      	} 
      },
      peg$c151 = "map",
      peg$c152 = peg$literalExpectation("map", false),
      peg$c153 = "<",
      peg$c154 = peg$literalExpectation("<", false),
      peg$c155 = ">",
      peg$c156 = peg$literalExpectation(">", false),
      peg$c157 = function(a, b, c, d, e) {
      	return {
            type: "field",
            typename: "map",
            key: a,
            value: b,
            name: c,
            fieldNo: d,
            opts: e == null ? {} : e
      	}
      },
      peg$c158 = "reserved",
      peg$c159 = peg$literalExpectation("reserved", false),
      peg$c160 = "to",
      peg$c161 = peg$literalExpectation("to", false),
      peg$c162 = "enum",
      peg$c163 = peg$literalExpectation("enum", false),
      peg$c164 = function(a, b) { return {type: 'enum', name: a, content: b.content, opts: b.opts } },
      peg$c165 = function(a) { 
      	var opts = {};
          var content = [];
      	for(var elem of a){
          	if(!elem)
              	continue;
              else if(elem.type == 'enumField')
              	content.push(elem);
          	else if(elem.type == 'option')
              	opts[elem.name] = elem.val;
          }
          return {content: content, opts: opts};
      },
      peg$c166 = function(a, b, c) {
      	return { type: 'enumField', name: a, val: b, opts: c == null ? {} : c };
      },
      peg$c167 = "message",
      peg$c168 = peg$literalExpectation("message", false),
      peg$c169 = function(a, b) { return {type: 'message', name: a, content: b.content, opts: b.opts } },
      peg$c170 = "extend",
      peg$c171 = peg$literalExpectation("extend", false),
      peg$c172 = function(a, b) { return {type: 'extend', name: a, content: b.content, opts: b.opts } },
      peg$c173 = function(a) { 
      	var opts = {};
          var content = [];
      	for(var elem of a){
          	if(!elem)
              	continue;
          	else if(elem.type == 'option')
              	opts[elem.name] = elem.val;
             	else
              	content.push(elem);
          }
          return {content: content, opts: opts};
      },
      peg$c174 = "service",
      peg$c175 = peg$literalExpectation("service", false),
      peg$c176 = function(a, b) { 
      	var opts = {};
          var content = [];
      	for(var elem of b){
          	if(!elem)
              	continue;
          	else if(elem.type == 'option')
              	opts[elem.name] = elem.val;
             	else
              	content.push(elem);
          }
          return {type: "service", name: a, content: content, opts: opts};
      },
      peg$c177 = "rpc",
      peg$c178 = peg$literalExpectation("rpc", false),
      peg$c179 = "stream",
      peg$c180 = peg$literalExpectation("stream", false),
      peg$c181 = "returns",
      peg$c182 = peg$literalExpectation("returns", false),
      peg$c183 = function(a, b, c, d, e, f) { 
        if(b && b[0] == "stream") {
            c.stream = true;
        }
        if (d && d[0] == "stream") {
            e.stream = true;
        }
        if (f == ";" ) {
            f = {};
        }
      	return { type: "rpc", name: a, param: c, returns: e, opts: f } 
      },
      peg$c184 = function(data) {
        const obj = {};
        for (let val of data[1]) {
            if (val && typeof val === 'object') {
                obj[val.name] = val.val;
            }
        }
        return obj;
      },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseproto() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesyntax();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseimport();
        if (s4 === peg$FAILED) {
          s4 = peg$parsepackage();
          if (s4 === peg$FAILED) {
            s4 = peg$parseoption();
            if (s4 === peg$FAILED) {
              s4 = peg$parseemptyStatement();
              if (s4 === peg$FAILED) {
                s4 = peg$parsemessage();
                if (s4 === peg$FAILED) {
                  s4 = peg$parseextend();
                  if (s4 === peg$FAILED) {
                    s4 = peg$parseenum();
                    if (s4 === peg$FAILED) {
                      s4 = peg$parseservice();
                      if (s4 === peg$FAILED) {
                        s4 = peg$parsews();
                      }
                    }
                  }
                }
              }
            }
          }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseimport();
          if (s4 === peg$FAILED) {
            s4 = peg$parsepackage();
            if (s4 === peg$FAILED) {
              s4 = peg$parseoption();
              if (s4 === peg$FAILED) {
                s4 = peg$parseemptyStatement();
                if (s4 === peg$FAILED) {
                  s4 = peg$parsemessage();
                  if (s4 === peg$FAILED) {
                    s4 = peg$parseextend();
                    if (s4 === peg$FAILED) {
                      s4 = peg$parseenum();
                      if (s4 === peg$FAILED) {
                        s4 = peg$parseservice();
                        if (s4 === peg$FAILED) {
                          s4 = peg$parsews();
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseslcomment() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      peg$silentFails++;
      if (input.substr(peg$currPos, 2) === peg$c3) {
        s5 = peg$c3;
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s5 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s5 = peg$c5;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
      }
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = void 0;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        if (input.substr(peg$currPos, 2) === peg$c3) {
          s5 = peg$c3;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s5 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s5 = peg$c5;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
        }
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = void 0;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s3 = peg$c5;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s3 === peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c3) {
            s3 = peg$c3;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsemlcomment() {
    var s0, s1, s2, s3, s4, s5;
